<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/title_dashboard"
        android:orderInCategory="10" />

    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_trending_up"
        android:title="@string/title_progress"
        android:orderInCategory="20" />

    <item
        android:id="@+id/navigation_drills"
        android:icon="@drawable/ic_target"
        android:title="@string/title_drills"
        android:orderInCategory="30" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        android:orderInCategory="40" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile"
        android:orderInCategory="50" />
</menu>

