<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.google.mediapipe.examples.poselandmarker.fragment.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.google.mediapipe.examples.poselandmarker.fragment.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_drills"
        android:name="com.google.mediapipe.examples.poselandmarker.fragment.DrillsFragment"
        android:label="@string/title_drills"
        tools:layout="@layout/fragment_drills" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.google.mediapipe.examples.poselandmarker.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
